--- a/index.html
+++ b/index.html
@@ -37,10 +37,59 @@
     
     <script>
         const words = [
-            { word: "apple", definition: "A round fruit with red, yellow, or green skin and firm white flesh." },
-            { word: "dog", definition: "A domesticated carnivorous mammal that typically has a long snout and an acute sense of smell." },
-            { word: "ocean", definition: "A very large expanse of sea, in particular, each of the main areas into which the sea is divided geographically." }
-        ];
+    { word: "to abide", definition: "To accept or act in accordance with a rule, decision, or recommendation." },
+    { word: "to arise", definition: "To emerge, become apparent, or come into being." },
+    { word: "to bear", definition: "To carry, support, or endure something difficult." },
+    { word: "to bend", definition: "To curve or force something to curve." },
+    { word: "to bid", definition: "To offer a certain price for something, especially at an auction." },
+    { word: "to burst", definition: "To break open suddenly and violently." },
+    { word: "to chide", definition: "To scold or rebuke someone." },
+    { word: "to cling", definition: "To hold tightly to something or someone." },
+    { word: "to creep", definition: "To move slowly and carefully to avoid being noticed." },
+    { word: "to dwell", definition: "To live in or think about something for a long time." },
+    { word: "to flee", definition: "To run away from danger or a threatening situation." },
+    { word: "to fling", definition: "To throw something forcefully." },
+    { word: "to forecast", definition: "To predict or estimate a future event or trend." },
+    { word: "to foresee", definition: "To predict or be aware of something before it happens." },
+    { word: "to forsake", definition: "To abandon or renounce something or someone." },
+    { word: "to grind", definition: "To crush or break something into small particles." },
+    { word: "to kneel", definition: "To go down on one's knees as a sign of reverence or submission." },
+    { word: "to lean", definition: "To incline or rest against something for support." },
+    { word: "to lend", definition: "To give something to someone for temporary use." },
+    { word: "to mow", definition: "To cut grass or plants with a scythe or machine." },
+    { word: "to offset", definition: "To counterbalance or compensate for something." },
+    { word: "to plead", definition: "To make an emotional appeal or request." },
+    { word: "to preset", definition: "To set or adjust something in advance." },
+    { word: "to rend", definition: "To tear something apart violently." },
+    { word: "to rid", definition: "To free or relieve someone or something of an unwanted burden." },
+    { word: "to seek", definition: "To attempt to find, obtain, or achieve something." },
+    { word: "to shed", definition: "To discard, remove, or let something fall naturally." },
+    { word: "to sink", definition: "To go down below the surface of a liquid." },
+    { word: "to slit", definition: "To make a long, narrow cut in something." },
+    { word: "to sow", definition: "To plant seeds in the ground for growth." },
+    { word: "to spill", definition: "To cause liquid to flow out of its container unintentionally." },
+    { word: "to spit", definition: "To eject saliva forcefully from the mouth." },
+    { word: "to spoil", definition: "To ruin or damage the value or quality of something." },
+    { word: "to spread", definition: "To extend over a large area or distribute widely." },
+    { word: "to spring", definition: "To move suddenly or quickly in a certain direction." },
+    { word: "to sting", definition: "To cause a sharp, burning pain." },
+    { word: "to stink", definition: "To have a strong, unpleasant smell." },
+    { word: "to strew", definition: "To scatter or spread things untidily over a surface." },
+    { word: "to strike", definition: "To hit forcefully or protest by refusing to work." },
+    { word: "to sweat", definition: "To excrete moisture through the skin due to heat or stress." },
+    { word: "to strive", definition: "To make great efforts to achieve something." },
+    { word: "to sweep", definition: "To clean or move something with a broom or sweeping motion." },
+    { word: "to swell", definition: "To increase in size or volume." },
+    { word: "to tear", definition: "To rip or damage something by pulling it apart." },
+    { word: "to thrive", definition: "To grow, develop, or be successful." },
+    { word: "to thrust", definition: "To push something forcefully and suddenly." },
+    { word: "to typeset", definition: "To arrange text for printing or display." },
+    { word: "to undergo", definition: "To experience or be subjected to something." },
+    { word: "to weep", definition: "To shed tears due to strong emotions." },
+    { word: "to withdraw", definition: "To remove oneself or something from a situation." },
+    { word: "to wring", definition: "To twist and squeeze something to remove liquid." }
+];
+
         
         const selectedWords = [];
         const wordList = document.getElementById("word-list");
